[package]
name = "biomorph_rs"
default-run = "biomorph_rs_bin"
version = "0.1.0"
authors = ["ScratchX98 <scratchx@gmx.com>"]
edition = "2021"

[[bin]]
name = "biomorph_rs_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8.5"
egui = "0.18.0"
eframe = { version = "0.18.0", features = ["persistence"] }
# serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"


[profile.release]
opt-level = 2 # fast and small wasm